# flops-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  container-compose.yml  container.sh  example.channels.json  example.users.json  run.sh  test.sh  update.sh
src/: db.rs  lib.rs  main.rs
src/db/: channel.rs  message.rs  mod.rs  session.rs  user.rs  vdb.rs
src/structures/: mod.rs  models.rs
src/structures/websocket/: actions.rs  events.rs  mod.rs
