[package]
name = "flops-backend"
version = "0.1.1"
edition = "2021"
authors = ["ToastXC <contact@toastxc.xyz>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures-util = "0.3.30"
dotenv = "0.15.0"
anyhow = "1.0.80"
rand = "0.9.0-alpha.0"
mongodb = "2.8.1"
axum = { version = "0.7.4", features = ["ws"] }
indexmap = { version = "2.2.3", features = ["serde"] }


