[package]
name = "flops-backend"
version = "0.1.1"
edition = "2021"
authors = ["ToastXC <contact@toastxc.xyz>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# the structures can be used outside of this repository and so there are features for it

# server
dotenv = { version = "0.15.0", optional = true }
anyhow = { version = "1.0.80", optional = true }
futures-util = { version = "0.3.30", optional = true }
tokio = { version = "1.36.0", features = ["full"], optional = true }
rand = { version = "0.9.0-alpha.0", optional = true }
mongodb = { version = "2.8.1", optional = true }
axum = { version = "0.7.4", features = ["ws"], optional = true }
# structures
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }
indexmap = { version = "2.2.3", features = ["serde"], optional = true }


[features]
default = ["server"]
structures = ["indexmap", "serde", "serde_json"]
server = ["structures", "dotenv", "axum", "futures-util", "tokio", "rand", "mongodb", "axum", "anyhow"]